--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,21 @@
-fastapi==0.115.6
-uvicorn[standard]==0.30.6
-pydantic==2.10.6
-jinja2==3.1.5
+# Requirements for UltronPro
+fastapi==0.111.0
+uvicorn==0.30.1
+pydantic==2.7.2
 python-multipart==0.0.9
-Pillow==10.4.0
-sentence-transformers>=3.0.0
+httpx==0.27.0
+networkx==3.3
+scikit-learn==1.4.2
 numpy==1.26.4
-httpx==0.28.1
+tiktoken==0.7.0
+python-dotenv==1.0.1
+openai==1.30.1
+groq==0.8.0
+anthropic==0.26.0
+sqlalchemy==2.0.30
+psycopg2-binary==2.9.9
+asyncpg==0.29.0
+loguru==0.7.2
+tenacity==8.3.0
+jinja2==3.1.4
+PyYAML==6.0.1
